Change img and add effects

--- a/src/historia.html
+++ b/src/historia.html
@@ -1,5 +1,5 @@
 <div class="page-content">
-  <div class="img-header">
+  <div class="img-header animate__animated animate__fadeIn">
     <img src="../img/hist-img.png" alt="História" />
   </div>
   <div class="segment">
