--- a/src/ovos.html
+++ b/src/ovos.html
@@ -1,5 +1,5 @@
 <div class="page-content">
-  <div class="img-header center">
+  <div class="img-header center animate__animated animate__fadeIn">
     <img src="../img/our-eggs.png" alt="Nossos Ovos" />
   </div>
   <div class="segment">
