--- a/src/home.html
+++ b/src/home.html
@@ -116,19 +116,22 @@
       <h4>Siga-nos</h4>
     </div>
     <div class="socialnw">
-      <div class="neticon">
+      <a href="https://www.facebook.com/ovossantaclara.caipira" target="blank" class="neticon">
         <i class="fa fa-facebook"></i>
-      </div>
-      <div class="neticon insta">
+      </a>
+      <a href="https://www.instagram.com/ovossantaclara.caipira/" target="blank" class="neticon insta">
         <i class="fa fa-instagram"></i>
-      </div>
+      </a>
       <div class="neticon twitter">
         <i class="fa fa-twitter"></i>
       </div>
     </div>
   </div>
   <div class="instafeed">
-    <iframe src="https://snapwidget.com/embed/875922" class="snapwidget-widget" allowtransparency="true" frameborder="0"
-      scrolling="no" style="border: none; overflow: hidden; width:100%; height: 160px"></iframe>
+    <div class="iconinsta">
+      <i class="fa fa-instagram"></i> 
+    </div>
+    <h4>Conheça Nosso Instagram</h4>
+   <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/92404d247db055319af7411a62e0b70d.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
   </div>
 </section>
