--- a/src/home.html
+++ b/src/home.html
@@ -132,6 +132,11 @@
       <i class="fa fa-instagram"></i> 
     </div>
     <h4>Conheça Nosso Instagram</h4>
-   <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/92404d247db055319af7411a62e0b70d.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+    <div data-mc-src="428c9910-9c66-4cff-83de-6184a5af368e"></div>
+        
+    <script 
+      src="https://cdn2.woxo.tech/a.js#5fb97478912164001747a12f" 
+      async data-usrc>
+    </script>
   </div>
 </section>
